  * Replaced pynifti with nibabel. Removed copyright information on pynifti
  * Added additional build-depends (matplotlib, sympy, nibabel, nitime)
  * Moved networkx and nibabel into Depends since they are core components
  * Added suggests for pyxnat and matlab-spm8
  * Added .doc-base for the documentation integration
  * Updated debian/README* files

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 22 Nov 2010 20:51:21 -0500

nipype (0.3.3-1) experimental; urgency=low

  * New upstream release
  * Included post release fix pushed upstream
    - python 2.5 compatibility: no keyword args after *args
  * Installing example code snippets within -doc package
  * Policy compliance boost to 3.9.1 -- no changes
  * Added 2 more lintian overrides for empty files

 -- Yaroslav Halchenko <debian@onerussian.com>  Thu, 16 Sep 2010 22:34:49 -0400

nipype (0.3.3~dartmouth1-1) experimental; urgency=low

  * New upstream snapshot prepared for the nipype workshop at Dartmouth
    college

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 13 Sep 2010 23:44:36 -0400

nipype (0.3.2-1) unstable; urgency=low

  * New upstream release (bugfixes and documentation).
    + Issues fixed since 0.3 in FreeSurfer interface:
      - bugs in glmfit and concatenate
      - SegStats doctest
    + Documentation fixes/enhancements:
      - Developers howtos
      - misc docstrings

 -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 09 Aug 2010 14:07:46 -0400

nipype (0.3-1) unstable; urgency=low

  * New upstream release
  * Debian packaging
    - Moving packaging under NeuroDebian umbrella
    - Adjusting debian/copyright for DEP5 rev 135
    - Policy compliance boost to 3.9.0 -- BSD license provided verbatim
    - Added AFNI available from NeuroDebian repository into Suggests
    - Added build and runtime depends on python-traits
    - Added lintian overrides for empty testing .gz files

 -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 20 Jul 2010 18:25:24 -0400
